<?php die(); ?>
Akeeba SocialLogin 4.0.1
================================================================================
# [MEDIUM] SVG images do not display on sites installed in subdirectories

Akeeba SocialLogin 4.0.0
================================================================================
~ Rewritten for Joomla 4
~ Bump minimum PHP version to 7.4
# [HIGH] Sign in with Apple did not work with PHP 8.0