@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
-  <component name="PublishConfigData" serverName="My Old Site">
+  <component name="PublishConfigData" serverName="Test4 Rocks">
     <serverData>
       <paths name="AkeebaDemo">
         <serverdata>
@@ -20,6 +20,13 @@
         <serverdata>
           <mappings>
             <mapping deploy="/" local="$PROJECT_DIR$" web="/" />
+          </mappings>
+        </serverdata>
+      </paths>
+      <paths name="Test4 Rocks">
+        <serverdata>
+          <mappings>
+            <mapping deploy="/plugins" local="$PROJECT_DIR$/plugins" web="/plugins" />
           </mappings>
         </serverdata>
       </paths>
