@@ -2,16 +2,14 @@
 <project version="4">
   <component name="PhpIncludePathManager">
     <include_path>
-      <path value="$PROJECT_DIR$/../../master/joomla4" />
+      <path value="$PROJECT_DIR$/../../master/joomla4___" />
       <path value="$PROJECT_DIR$/../../dionysopoulos/joomlatypehints/generated_hints" />
-      <path value="$PROJECT_DIR$/../../master/joomla-cms" />
+      <path value="$USER_HOME$/Sites/boot4" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/composer" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/lcobucci/jwt" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/phpseclib/phpseclib" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/codercat/jwk-to-pem" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/phpseclib/bcmath_compat" />
-      <path value="$USER_HOME$/Sites/dev3" />
-      <path value="$PROJECT_DIR$/vendor/composer" />
       <path value="$PROJECT_DIR$/plugins/system/sociallogin/vendor/lcobucci/clock" />
     </include_path>
   </component>
